[project]
name = "retile"
version = "0.2.0"
description = ""
readme = "README.rst"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3"
]
dependencies = [ ]
license = {file = "LICENSE.txt"}

[[project.authors]]
name = "Karl Knechtel"
email = "zahlman@proton.me"
