[project]
name = "retile"
version = "0.2.0"
description = ""
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3"
]
dependencies = [ "imageio" ]
license = {file = "LICENSE.txt"}

[[project.authors]]
name = "Karl Knechtel"
email = "zahlman@proton.me"
